# sailboat_project

./: .gitignore  README.md  guide.md
docs/images/: README.md
sailboat_control/: package.xml  setup.cfg  setup.py
sailboat_control/dashboard/: index.html
sailboat_control/launch/: autonomy_dashboard.launch.py  dashboard.launch.py
sailboat_control/sailboat_control/: actuator_node.py  apparent_wind_sensor.py  buoy_detector.py  course_manager.py  dashboard_node.py  sailboat_autonomy.py  sailboat_teleop_node.py
sailboat_description/: CMakeLists.txt  package.xml
sailboat_description/launch/: check_urdf.launch.py  gz_sim.launch.py
sailboat_description/models/floating_box/: model.config  model.sdf
sailboat_description/rviz/: rviz.rviz
sailboat_description/urdf/: box.urdf
sailboat_description/worlds/: my_ocean.sdf
sailboat_gazebo/: CMakeLists.txt  package.xml
sailboat_gazebo/launch/: sim.launch.py
sailboat_gazebo/models/sailboat/: model.config  model.sdf
sailboat_gazebo/models/wind_arrow/: model.config  model.sdf
sailboat_gazebo/worlds/: minimal_ocean.sdf
sailboat_gz_plugin/: CMakeLists.txt  package.xml
sailboat_gz_plugin/include/sailboat_gz_plugin/: ForcePlugin.hh
sailboat_gz_plugin/src/: ForcePlugin.cc  register.cc
sailboat_physics/: package.xml  setup.cfg  setup.py
sailboat_physics/sailboat_physics/: boat_motion_node.py  boat_physics_node.py  dynamics.py  force_test_node.py  sailboat_game_physics.py  sailboat_wind_physics.py  utils.py  vector2.py
