<?xml version="1.0"?>
<package format="3">
  <name>sailboat_control</name>
  <version>0.0.0</version>
  <description>Control, autonomy, perception, teleoperation, and dashboard nodes for the autonomous sailboat simulation.</description>
  <maintainer email="szekelyzalan03@gmail.com">szekelyzalan</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>launch_ros</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
