<?xml version="1.0"?>
<package format="3">
  <name>sailboat_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo Harmonic world, sailboat model, sensor setup, and launch integration for the autonomous sailboat simulation.</description>
  <maintainer email="szekelyzalan03@gmail.com">szekelyzalan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch files -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Gazebo / GZ -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>sailboat_physics</exec_depend>

  <!-- Python launch helper -->
  <exec_depend>ament_index_python</exec_depend>

  <!-- Optional but useful -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
