<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sailboat_gz_plugin</name>
  <version>0.0.0</version>
  <description>Gazebo force plugin</description>
  <maintainer email="szekelyzalan03@gmail.com">szekelyzalan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>gz-sim8</depend>
  <depend>gz-plugin2</depend>
  <depend>gz-math7</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
