<?xml version="1.0"?>
<package format="3">
  <name>sailboat_physics</name>
  <version>0.0.0</version>
  <description>Simplified sailboat dynamics node for driving the Gazebo simulation from wind, baum, and rudder commands.</description>
  <maintainer email="szekelyzalan03@gmail.com">szekelyzalan</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
